Visual fixes for all pages after merger
Added Homepage min-width value for resizing. Fixed footer line up on all
booking-process pages. Fixed issues with divs not lining up. General
visual fixes.

--- a/client/css/booking.css
+++ b/client/css/booking.css
@@ -28,7 +28,7 @@
 
 .sidebar {
 	margin-top: 65px;
-	height: 100%;
+	height: 600px;
 	width: 250px;
 	margin-bottom: 0;
 	top: 0;
