--- a/client/css/calendar.css
+++ b/client/css/calendar.css
@@ -9,15 +9,15 @@ body {font-family: Verdana,sans-serif;}
 
 /*Sidebar classes*/
 .makeABooking {
-    position: absolute;
     margin-top: 65px;
-    height: 100%;
+    height: 600px;
     width: 250px;
     margin-bottom: 0;
     top: 0;
     left: 0;
     position: absolute;
-    background-color: grey;
+    color: white;
+    background-color: grey !important;
     border: 3px solid #282828;
 }
 
@@ -52,6 +52,7 @@ body {font-family: Verdana,sans-serif;}
     text-align: center;
     border: 3px solid dimgrey;
     border-radius: 5px;
+    color: #282828;
 
 
 }
