--- a/client/css/confirmation.css
+++ b/client/css/confirmation.css
@@ -1,6 +1,7 @@
 .confirmationBackground{
 	height: 100%;
 	width: 100%;
+	margin-bottom: 300px;
 }
 
 .confirmationBox{
